refactoring, setting detailed message for errors
