# controllers/model/dto/request/driverRequest.go
@@ -1,6 +1,7 @@
 package request
 
 import (
+	"driver-location-api/domain/constants"
 	"driver-location-api/domain/model"
 	"driver-location-api/domain/model/core"
 	err "driver-location-api/error"
@@ -8,13 +9,13 @@ import (
 )
 
 type DriverLocationRequest struct {
-	Type     string          `json:"type"`
-	Location core.Coordinate `json:"location"`
+	Type     string          `json:"type" validate:"required"`
+	Location core.Coordinate `json:"location" validate:"required"`
 }
 
 type SearchDriverRequest struct {
-	Radius      int             `json:"radius"`
-	Coordinates core.Coordinate `json:"coordinates"`
+	Radius      int             `json:"radius" validate:"required"`
+	Coordinates core.Coordinate `json:"coordinates" validate:"required"`
 }
 
 func (dlr DriverLocationRequest) ToDriverInfo() model.DriverInfo {
@@ -30,13 +31,14 @@ func (dlr DriverLocationRequest) ToDriverInfo() model.DriverInfo {
 	}
 }
 
-func (dlr DriverLocationRequest) Validate() *err.Error {
+func (dlr DriverLocationRequest) ValidateValues() *err.Error {
 	if !model.IsValidLongitude(dlr.Location.Longitude) ||
 		!model.IsValidLatitude(dlr.Location.Latitude) ||
 		!model.IsPointType(dlr.Type) {
 		return &err.Error{
 			Code:    http.StatusUnprocessableEntity,
 			Message: "Make sure fields are not empty and valid",
+			Details: constants.InvalidCoordinates,
 		}
 	}
 	return nil
