# docs/swagger.json
@@ -41,6 +41,10 @@
     "definitions": {
         "core.Coordinate": {
             "type": "object",
+            "required": [
+                "latitude",
+                "longitude"
+            ],
             "properties": {
                 "latitude": {
                     "type": "number"
@@ -57,6 +61,7 @@
                     "type": "integer"
                 },
                 "data": {},
+                "errorDetails": {},
                 "message": {
                     "type": "string"
                 }
@@ -64,6 +69,10 @@
         },
         "request.DriverLocationRequest": {
             "type": "object",
+            "required": [
+                "location",
+                "type"
+            ],
             "properties": {
                 "location": {
                     "$ref": "#/definitions/core.Coordinate"
